# Human_monitoring_system

./: .gitignore  CMakeLists.txt  README.md  config.json  resources.qrc
include/core/: application.hpp  camera.hpp
include/database/: user_database.hpp
include/detection/: fall_detector.hpp  human_detector.hpp  privacy_protector.hpp
include/network/: notification_manager.hpp
include/ui/: main_window.hpp
scripts/: download_models.sh
src/: main.cpp  main_qt.cpp
src/core/: application.cpp  camera.cpp
src/database/: user_database.cpp
src/detection/: fall_detector.cpp  privacy_protector.cpp
src/network/: notification_manager.cpp
src/ui/: main_window.cpp
tests/: CMakeLists.txt  test_database.cpp  test_fall_detector.cpp  test_human_detector.cpp  test_notification.cpp
